--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,4 +1,4 @@
 <!-- https://issuehunt.io/r/storybookjs/storybook/issues/15391 -->
 <script>
-  window.global = window;
+  window.global = window
 </script>
